fixed scrollbar on body

--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -14,5 +14,6 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
+    overflow: hidden;
     font-family: 'Roboto', 'sans-serif';
 }
